# CS2612-BigWork

./: .gitignore  CMakeLists.txt  README.md  SUBMISSION.md  plan.md  progress_email.md  report.jsonl  report_all.txt  syntax.h  tests.txt
.github/workflows/: ci.yml
.trae/documents/: 一阶逻辑处理器实现与构建计划.md
build-new/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  fol  test_parser  test_polarity  test_transform
build-new/Testing/Temporary/: CTestCostData.txt
build-review/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  fol  test_ast  test_errors  test_polarity
build-review/Testing/Temporary/: CTestCostData.txt
src/: ast.c  bison_adapter.c  bison_adapter.h  lexer.c  lexer.h  main.c  parser.y  polarity.c  print.c  print.h  rdparser.c  rdparser.h  sb.c  sb.h  test_ast.c  test_errors.c  test_parser.c  test_polarity.c  test_transform.c  transform.c
